# assistant-chat

./: AI_SDK_v5.md  README.md  catch-up.md  package.json  pnpm-lock.yaml
.changeset/: add-by-index-primitives.md  bumpy-peaches-float.md  cloud-format-parameter.md  cold-worms-swim.md  curly-beds-end.md  cyan-socks-shop.md  eight-cooks-beg.md  fancy-bats-rest.md  fluffy-pans-win.md  funny-baths-flash.md  giant-cats-yawn.md  gold-bugs-lose.md  grumpy-numbers-bake.md  hip-views-talk.md  khaki-beans-return.md  kind-heads-grab.md  late-shrimps-breathe.md  lazy-spoons-move.md  little-fans-smash.md  major-books-clap.md  moody-pillows-hunt.md  moody-stingrays-tan.md  nine-parks-chew.md  nine-plants-shop.md  parent-id-grouping.md  pink-coins-sell.md  proud-steaks-learn.md  rare-pigs-ring.md  reset-external-store-thread.md  rude-aliens-float.md  selfish-socks-film.md  shaggy-trains-walk.md  silly-walls-send.md  slow-beans-hang.md  small-shrimps-reflect.md  smooth-monkeys-destroy.md  stale-dolls-try.md  stale-hounds-lay.md  stale-schools-chew.md  swift-bobcats-hunt.md  (+4 more)
.claude/: settings.json
.github/workflows/: fix-prettier.yaml  testdriver.yml
apps/docs/: next.config.ts  package.json
apps/registry/: package.json
examples/local-ollama/: package.json
examples/search-agent-for-e-commerce/: package.json
python/assistant-ui-sync-server-api/: README.md  pyproject.toml
python/assistant-ui-sync-server-api/examples/: basic_example.py
python/assistant-ui-sync-server-api/src/assistant_ui/: client.py  types.py
python/assistant-ui-sync-server-api/tests/: test_client.py
(+80 files in other folders)
